@@ -1,9 +1,10 @@
 <thead>
   <tr>
     <%
-    active_scaffold_config_for(record.class).subform.columns.each :for => record.class, :crud_type => :read, :flatten => true do |column|
-      hidden = column_renders_as(column) == :hidden
+    active_scaffold_config_for(record.class).subform.columns.each :for => record.class, :crud_type => :read do |column|
+      next if column.is_a? ActiveScaffold::DataStructures::ActionColumns
       next unless in_subform?(column, parent_record)
+      hidden = column_renders_as(column) == :hidden
       -%>
       <th class="<%= "#{column.name}-column #{'required' if column.required?} #{'hidden' if hidden}" %>"><label><%= column.label unless hidden %></label></th>
     <% end -%>
